<resources>
    <string name="app_name">Number Locator - Phone Tracker</string>

    <string name="unit_kmh">km/h</string>
    <string name="unit_mph">mi/h</string>
    <string name="unit_ms">m/s</string>
    <string name="unit_fts">ft/s</string>
    <string name="speed_unit_formating">%1$s %2$s</string>
    <string name="WeatherID">0c8210e1d90e8441fc10a759d2e8a874</string>
    <string name="GOOGLE_MAP_KEY">AIzaSyDkLf7MaEEM98L8tMgGVRpi1RqBJ0ImEe4</string>

    <string name="enableGPS">Turn On Your Mobile GPS</string>
    <string name="current_speed">Current Speed</string>
    <string name="unknown">Unknown</string>
    <string name="setting_service_label">Speedometer</string>
    <string name="permissionDeneid">Permission Denied</string>
    <string name="number_detector">Mobile Number Finder</string>
    <string name="install">INSTALL</string>
    <string name="current_location">Current Location</string>
    <string name="locator_tool">Locator Tool</string>
    <string name="manage_phone">Manage Phone</string>
    <string name="data_usage">Data Usage</string>
    <string name="number_location">Number Location</string>
    <string name="number_locator">Number Locator</string>
    <string name="current_locator">Current Locator</string>
    <string name="speedometer">Speedometer</string>
    <string name="search_country_number">Search Country Number</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_version">App Version</string>
    <string name="stop_testing">Stop Testing</string>
    <string name="start_testing">Start Testing</string>
    <string name="keep_updating_while_screen_is_off">Keep updating while screen is off</string>
    <string name="lets_start">Lets Start</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="thank_you_for_using_our_app">Thank you for using our app!</string>
    <string name="rate_us_subtitle">Did you find our app helpful and convenient? Let others know by rating us!</string>
    <string name="rate_now">Rate Now</string>
    <string name="app_language">App Language</string>
    <string name="this_action_may_contain_ad">This action may contain ad</string>
</resources>