<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.number.locator.phone.tracker.app.ui.activities.SplashActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/splash_image"
        android:layout_marginTop="@dimen/_60sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/number_locator"
        android:textColor="@color/themeColor"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/letsStart"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/lets_start"
        android:visibility="invisible"
        android:backgroundTint="@color/themeColor"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginBottom="@dimen/_15sdp"
        android:textSize="@dimen/_13sdp"
        app:cornerRadius="@dimen/_25sdp"
        app:layout_constraintBottom_toTopOf="@id/tvvv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tvvv"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateTint="@color/themeColor"
        android:layout_marginBottom="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/letsStart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_action_may_contain_ad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/themeColor"
        android:id="@+id/tvvv"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/layout_native"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:elevation="@dimen/_3sdp"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"

        app:layout_constraintBottom_toTopOf="@+id/letsStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <include layout="@layout/native_ad_small_shimmer" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>