<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/card_bg_design"
    android:backgroundTint="@color/white"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" >

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/rateus_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/thank_you_for_using_our_app"
        android:textColor="@color/black"
        android:textSize="@dimen/_17sdp"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="@dimen/_10sdp"
        android:textSize="@dimen/_11sdp"
        android:text="@string/rate_us_subtitle"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:progressTint="#F8B84E"
        android:rating="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rateUsBtn"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/themeColor"
        android:text="@string/rate_now"
        app:cornerRadius="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ratingBar2"
        app:layout_constraintStart_toStartOf="@+id/ratingBar2"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar2" />









</androidx.constraintlayout.widget.ConstraintLayout>