<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.number.locator.phone.tracker.app.ui.activities.SettingsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@color/themeColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/back_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backArrow"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lang"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/white"
        android:foreground="?selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/rateus_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/app_language"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rateUs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/white"
        android:foreground="?selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/lang">

        <ImageView

            android:id="@+id/imageView6"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/rateus_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/rate_us"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shareBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/white"
        android:foreground="?selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/rateUs">

        <ImageView

            android:id="@+id/imageView7"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/share_ic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/privacyPolicyBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/white"
        android:foreground="?selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/shareBtn">

        <ImageView

            android:id="@+id/imageView8"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/privacy_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/privacy_policy"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appVersion"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/white"
        android:foreground="?selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/privacyPolicyBtn">

        <ImageView

            android:id="@+id/imageView9"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/version_ic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/app_version"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/layout_native"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:elevation="@dimen/_3sdp"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/large_native_shimmer_layout" />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>