<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.number.locator.phone.tracker.app.ui.activities.ActivitySpeedoMeter">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@color/themeColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/back_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/speedometer"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backArrow"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/speedoMeterFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <com.phone.tracker.locate.number.app.CustomSpeedoMeter.SpeedoMeterView
            android:id="@+id/speedoMeter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speedoMeterFrame">

        <TextView
            android:id="@+id/selectedDistanceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal"
            android:text="100 Km/h"
            android:textColor="#393D98"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectedDistanceText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/firstDis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardBg"
            android:text="100 Km/h"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toStartOf="@+id/secondDis"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/selectedDistanceText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/secondDis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="m/s"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toStartOf="@+id/thirdDis"
            app:layout_constraintStart_toEndOf="@+id/firstDis"
            app:layout_constraintTop_toBottomOf="@+id/selectedDistanceText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/thirdDis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="mi/h"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintStart_toEndOf="@+id/secondDis"
            app:layout_constraintTop_toBottomOf="@+id/selectedDistanceText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forthdDis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="ft/s"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/thirdDis"
            app:layout_constraintTop_toBottomOf="@+id/selectedDistanceText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ToggleButton
        android:id="@+id/stopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/themeColor"
        android:fontFamily="@font/poppins_medium"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:textOn="@string/stop_testing"
        android:textColor="@color/white"
        android:textOff="@string/start_testing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/keep_updating_while_screen_is_off"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/stopBtn" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />


    <androidx.cardview.widget.CardView
        android:id="@+id/layout_native"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"

        android:elevation="@dimen/_3sdp"
        android:visibility="invisible"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    <include layout="@layout/native_ad_small_shimmer" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>